tdf#168988 docx export: ensure valid ISO8601 FormDate fullDate

Without this fix, datePickers with invalid content
were dumping the content into the fullDate element on export,
which caused MS Word to report the file as corrupt.

datePickers inside tables are imported
as fields by LO, not as a date content control.
(I believe this can be changed by an advanced config setting.)

So, if invalid content was loaded into ODF_FORMDATE_CURRENTDATE
(which is fine - it SHOULD be displayed)
it was then being round-tripped as both content
AND as the fullDate element.
Just round-trip non-date strings as content.

make CppunitTest_sw_ooxmlexport25 \
    CPPUNIT_TEST_NAME=testTdf168988_grabbagDatePicker

Change-Id: I1275de94f1da5f0bb9a319c52ea8a4c67e9564ae
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/199229
Tested-by: Jenkins CollaboraOffice <jenkinscollaboraoffice@gmail.com>
Reviewed-by: Justin Luth <jluth@mail.com>
Reviewed-by: Miklos Vajna <vmiklos@collabora.com>