sw/qa/extras/ooxmlexport/ooxmlexport25.cxx
@@ -157,6 +157,20 @@ CPPUNIT_TEST_FIXTURE(Test, testTdf170516_drawingBeforePlainText)
     assertXPath(pXmlDoc, "//w:tc/w:p/w:r/mc:AlternateContent", 1); // and it is not inside the sdt
 }
 
+CPPUNIT_TEST_FIXTURE(Test, testTdf168988_grabbagDatePicker)
+{
+    createSwDoc("tdf168988_grabbagDatePicker.docx");
+
+    save(TestFilter::DOCX);
+    xmlDocUniquePtr pXmlDoc = parseExport(u"word/document.xml"_ustr);
+    assertXPath(pXmlDoc, "//w:sdt", 1); // only one sdt
+    assertXPath(pXmlDoc, "//w:sdt/w:sdtPr/w:date", 1); // it is a date content control
+    // there is no valid date, so fullDate must not be provided (or MS Word says 'corrupt file')
+    assertXPathNoAttribute(pXmlDoc, "//w:sdt/w:sdtPr/w:date", "fullDate");
+    assertXPathContent(pXmlDoc, "//w:sdt/w:sdtContent/w:r/w:t",
+                       u"                                     2012./2013.");
+}
+
 CPPUNIT_TEST_FIXTURE(Test, testTdf170389_manyTabstops)
 {
     createSwDoc("tdf170389_manyTabstops.odt");
